<resources>
    <string name="app_name">IntentMaul</string>
    <string name="move_activity">PINDAH ACTIVITY</string>
    <string name="move_with_data">PINDAH ACTIVITY DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH ACTIVITY UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI ACTIVITY</string>
    <string name="choose_os">PILIH OS</string>
    <string name="_android">ANDROID</string>
    <string name="_windows">WINDOWS</string>
    <string name="_linux">LINUX</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH ACTIVITY</string>
</resources>